# canada-weather

./: .gitignore  README.md  data.csv  main.py  pyproject.toml  sales_chart_app.py  slides.md  test_sales_chart.py  tutorial_outline.md
.github/workflows/: deploy.yml
