[project]
name = "ch-13-charting-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.80.1",
    "flet-charts>=0.80.1",
    "httpx>=0.27.0",
    "oauthlib>=3.2.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.1",
    "flet-desktop>=0.80.1",
    "pytest>=9.0.2",
]
